--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <input type="text" name="buy" placeholder="Buy amount" value="0" />
       <button type="submit" class="form-submit">Add course</button>
     </form>
+    <div class="filter-wrapper">
+      <input type="text" name="filter" placeholder="search something..." />
+    </div>
 
     <div class="course-list"></div>
     <script src="./courses.js"></script>
